components/policies/production/base/image-controller/.chainsaw-test/chainsaw-assert-imagerepository-crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: imagerepositories.konflux-ci.dev
status:
  acceptedNames:
    kind: ImageRepository
